# mrs_uav_state_estimators

./: .gitignore  CMakeLists.txt  README.md  estimator_plugins.xml  nodelets.xml  package.xml  plugins.xml
.github/workflows/: noetic.yml
cfg/: AltitudeEstimator.cfg  Correction.cfg  HeadingEstimator.cfg  LateralEstimator.cfg
config/: estimation_manager.yaml  estimators.yaml  transform_manager.yaml
config/estimators/aloam/: aloam.yaml  alt_aloam.yaml  hdg_aloam.yaml  lat_aloam.yaml
config/estimators/altitude/: alt_aloam.yaml  alt_garmin.yaml  alt_rtk.yaml
config/estimators/dummy/: dummy.yaml
config/estimators/estimation_manager/: est_alt_agl.yaml
config/estimators/garmin_agl/: garmin_agl.yaml
config/estimators/gps_baro/: alt_baro.yaml  gps_baro.yaml  hdg_hw_api.yaml  hdg_mavros.yaml  lat_gps.yaml
config/estimators/gps_garmin/: alt_garmin.yaml  gps_garmin.yaml  hdg_hw_api.yaml  hdg_mavros.yaml  lat_gps.yaml
config/estimators/ground_truth/: ground_truth.yaml
config/estimators/heading/: hdg_aloam.yaml  hdg_mavros.yaml
config/estimators/hector_garmin/: alt_garmin.yaml  hdg_hector.yaml  hector_garmin.yaml  lat_hector.yaml
config/estimators/lateral/: lat_aloam.yaml  lat_gps.yaml  lat_rtk.yaml
config/estimators/passthrough/: passthrough.yaml
config/estimators/rtk/: alt_rtk.yaml  hdg_hw_api.yaml  hdg_mavros.yaml  lat_rtk.yaml  rtk.yaml
config/estimators/vio/: alt_vio.yaml  hdg_vio.yaml  lat_vio.yaml  vio.yaml
config/private/aloam/: aloam.yaml
config/private/f9p/: f9p.yaml
config/private/garmin_agl/: garmin_agl.yaml
config/private/gps_baro/: gps_baro.yaml
config/private/gps_garmin/: gps_garmin.yaml
config/private/hector_garmin/: hector_garmin.yaml
config/private/passthrough/: passthrough.yaml
config/private/rtk/: rtk.yaml
config/private/rtk_garmin/: rtk_garmin.yaml
config/private/vio/: vio.yaml
config/public/aloam/: aloam.yaml  alt_aloam.yaml  hdg_aloam.yaml  lat_aloam.yaml
config/public/dummy/: dummy.yaml
config/public/f9p/: f9p.yaml
config/public/garmin_agl/: garmin_agl.yaml
config/public/gps_baro/: alt_baro.yaml  gps_baro.yaml  hdg_hw_api.yaml  lat_gps.yaml
config/public/gps_garmin/: alt_garmin.yaml  gps_garmin.yaml  hdg_hw_api.yaml  lat_gps.yaml
config/public/hector_garmin/: alt_garmin.yaml  hdg_hector.yaml  hector_garmin.yaml
config/public/passthrough/: passthrough.yaml
config/public/rtk/: alt_rtk.yaml  hdg_hw_api.yaml  lat_rtk.yaml  rtk.yaml
config/public/rtk_garmin/: alt_garmin.yaml  hdg_hw_api.yaml  lat_rtk.yaml  rtk_garmin.yaml
config/public/vio/: alt_garmin.yaml  hdg_vio.yaml  lat_vio.yaml  vio.yaml
include/: altitude_estimator.h  common_handlers.h  estimation_manager.h  estimator.h  lateral_estimator.h  state_estimator.h  support.h  tf_source.h  transform_manager.h  types.h
include/estimators/: correction.h  estimator.h  partial_estimator.h
include/estimators/agl/: garmin_agl.h
include/estimators/altitude/: alt_generic.h  altitude_estimator.h  garmin.h
include/estimators/heading/: hdg_generic.h  hdg_passthrough.h  heading_estimator.h
include/estimators/lateral/: gps.h  lat_generic.h  lateral_estimator.h
include/estimators/processors/: proc_median_filter.h  processor.h
include/processors/: proc_excessive_tilt.h  proc_median_filter.h  proc_saturate.h  proc_tf_to_world.h  processor.h
launch/: estimation_manager.launch  estimation_testing.launch  plot_juggler.launch  transform_manager.launch
launch/core/: automatic_start.launch  control_manager.launch  core.launch  status.launch  uav_manager.launch
msg/: Diagnostics.msg
old/: CMakeLists.txt_old
old/test/: CMakeLists.txt
plot_juggler/: manager_debug.xml
scripts/: get_public_params.py  plot_juggler.sh
src/: estimation_manager.cpp  estimators_testing.cpp  transform_manager.cpp
src/estimators/: estimator.cpp
src/estimators/state/: f9p.cpp  (+12 more)
test/: CMakeLists.txt  all_tests.sh  coverage.sh  run_specific_test.sh  single_test.sh
test/dummy/: CMakeLists.txt
test/dummy/dummy_basic/: test.cpp  test.py
test/dummy/dummy_basic/config/: custom_config.yaml  hw_api.yaml  world_config.yaml
test/garmin_agl/: CMakeLists.txt
test/garmin_agl/garmin_agl_basic/: test.cpp  test.py
test/garmin_agl/garmin_agl_basic/config/: hw_api.yaml
test/gps_baro/: CMakeLists.txt
test/gps_baro/basic/: gps_baro_basic.test  test.cpp
test/gps_baro/basic/launch/: mrs_uav_system.launch
test/gps_baro/gps_baro_basic/: gps_baro_basic.test  test.cpp  test.py
test/gps_baro/gps_baro_basic/config/: custom_config.yaml  hw_api.yaml  world_config.yaml
test/gps_garmin/: CMakeLists.txt
test/gps_garmin/basic/: gps_garmin_basic.test  test.cpp
test/gps_garmin/basic/config/: custom_config.yaml  hw_api.yaml
test/gps_garmin/basic/launch/: mrs_uav_system.launch
test/gps_garmin/gps_garmin_basic/: test.cpp  test.py
test/gps_garmin/gps_garmin_basic/config/: hw_api.yaml
test/ground_truth/: CMakeLists.txt
test/ground_truth/ground_truth_basic/: test.cpp
test/ground_truth/ground_truth_basic/config/: custom_config.yaml  hw_api.yaml  mrs_simulator.yaml  world_config.yaml
test/passthrough/: CMakeLists.txt
test/passthrough/passthrough_basic/: test.cpp  test.py
test/passthrough/passthrough_basic/config/: custom_config.yaml  hw_api.yaml  world_config.yaml
test/rtk/: CMakeLists.txt
test/rtk/basic/: rtk_basic.test  test.cpp
test/rtk/basic/config/: custom_config.yaml  world_config.yaml
test/rtk/basic/launch/: mrs_uav_system.launch
test/rtk/rtk_basic/: CMakeLists.txt  test.cpp
test/rtk/rtk_basic/config/: hw_api.yaml  world_config.yaml
test/rtk_garmin/: CMakeLists.txt
test/rtk_garmin/basic/: rtk_garmin_basic.test  test.cpp
test/rtk_garmin/basic/config/: custom_config.yaml
test/rtk_garmin/basic/launch/: mrs_uav_system.launch
test/rtk_garmin/rtk_garmin_basic/: rtk_garmin_basic.test  test.cpp  test.py
test/rtk_garmin/rtk_garmin_basic/config/: hw_api.yaml  world_config.yaml
tests/: mrs_uav_state_estimation.test  run_tests.sh
tests/corrections/: corrections.test  test_corrections.cpp
tmux/testing/: just_flying.sh  just_flying_integration.sh
(+48 files in other folders)
