<?xml version="1.0"?>
<package format="2">

  <name>mrs_uav_state_estimation</name>
  <version>0.0.3</version>
  <description>The mrs_uav_state_estimation package</description>

  <author email="matej.petrlik@fel.cvut.cz">Matej Petrlik</author>
  <maintainer email="matej.petrlik@fel.cvut.cz">Matej Petrlik</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_msgs</depend>
  <depend>nodelet</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <export>
    generate_messages_cpp
    <nodelet plugin="${prefix}/nodelets.xml" />
    <mrs_uav_state_estimation plugin="${prefix}/estimator_plugins.xml" />
  </export>

</package>
