<?xml version="1.0"?>
<package format="2">

  <name>mrs_uav_state_estimators</name>
  <version>0.0.3</version>
  <description>The mrs_uav_state_estimators package</description>

  <author email="matej.petrlik@fel.cvut.cz">Matej Petrlik</author>
  <maintainer email="matej.petrlik@fel.cvut.cz">Matej Petrlik</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_msgs</depend>
  <depend>nodelet</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>mrs_uav_managers</depend>

  <exec_depend>pluginlib</exec_depend>
  <exec_depend>mrs_uav_general</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>plotjuggler</exec_depend>

  <test_depend>rostest</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
    <mrs_uav_managers plugin="${prefix}/estimator_plugins.xml" />
  </export>

</package>
